default/objects/WS_User_Setting__c/fields/Amount_Type_Filters__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type_Filters__c</fullName>
    <label>Amount Type Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>