default/objects/WS_User_Setting__c/fields/Column_Filters__c.field-meta.xml
<CustomField>
    <fullName>Column_Filters__c</fullName>
    <label>Column Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>