default/objects/WS_User_Setting__c/fields/Highlight_Filters__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Filters__c</fullName>
    <description>List of highlight id&apos;s used to hide highlights from view</description>
    <label>Highlight Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>