default/objects/WS_User_Setting__c/fields/Row_Filters__c.field-meta.xml
<CustomField>
    <fullName>Row_Filters__c</fullName>
    <label>Row Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>