default/objects/WS_User_Setting__c/fields/Show_Empty_Columns__c.field-meta.xml
<CustomField>
    <fullName>Show_Empty_Columns__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to show columns that do not have data in any of their cells</description>
    <label>Show columns without data</label>
    <type>Checkbox</type>
</CustomField>