default/objects/WS_User_Setting__c/fields/Show_Empty_Rows__c.field-meta.xml
<CustomField>
    <fullName>Show_Empty_Rows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to show rows that do not have any cells with data</description>
    <label>Show rows without data</label>
    <type>Checkbox</type>
</CustomField>