default/objects/WS_User_Setting__c/fields/Show_Populated_Columns__c.field-meta.xml
<CustomField>
    <fullName>Show_Populated_Columns__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to show columns that have at least one cell with data</description>
    <label>Show columns with data</label>
    <type>Checkbox</type>
</CustomField>