default/objects/WS_User_Setting__c/fields/Show_Populated_Rows__c.field-meta.xml
<CustomField>
    <fullName>Show_Populated_Rows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to show rows in the cross sell that have data in at least one cell</description>
    <label>Show rows with data</label>
    <type>Checkbox</type>
</CustomField>