default/objects/WS_User_Setting__c/fields/Show_Unhighlighted__c.field-meta.xml
<CustomField>
    <fullName>Show_Unhighlighted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Unhighlighted</label>
    <type>Checkbox</type>
</CustomField>