default/objects/WS_User_Setting__c/fields/White_Space__c.field-meta.xml
<CustomField>
    <fullName>White_Space__c</fullName>
    <label>White Space</label>
    <referenceTo>White_Space__c</referenceTo>
    <relationshipLabel>WS User Settings</relationshipLabel>
    <relationshipName>WS_User_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>