default/objects/WS_User_Setting__c/fields/Zoom_Index__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Index__c</fullName>
    <label>Zoom Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>